# FinAuditPro

./: .gitignore  Building FinAuditPro Frontend Integration.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FinAuditPro.spec  FinAuditPro_Synopsis.docx  GEMINI_3_6_FLASH_TASKS.md  README.md  REP-1784652824_Audit_Pack.csv  REP-1784655930_Audit_Pack.xlsx  REP-1784655949_Audit_Pack.xlsx  REP-1784655993_Audit_Pack.xlsx  REP-1784655994_Audit_Pack.xlsx  SECURITY.md  brutal_code_audit.md  handover_status.md  install.bat  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
Codes/: Login.py
HTML/: design.txt  finauditpro_ai_assistant.html  finauditpro_ai_audit_analysis.html  finauditpro_audit_history.html  finauditpro_client_management.html  finauditpro_compliance_monitoring.html  finauditpro_dashboard.html  finauditpro_design_specification.md  finauditpro_document_upload.html  finauditpro_gst_verification.html  finauditpro_login.html  finauditpro_ocr_processing.html  finauditpro_profile.html  finauditpro_report_generation.html  finauditpro_risk_analysis.html  finauditpro_settings.html  finauditpro_splash_screen.html
Image/: FinAuditPro_Project_Documentation.docx  FinAuditPro_Synopsis.docx
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  COMPATIBILITY.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  FinAuditPro_Enterprise_Documentation.txt  INDEX.md  INSTALLATION.md  PROJECT_STRUCTURE.md  Pulling Remote FinAuditPro Repository.md  ROADMAP.md  SECURITY.md  SUPPORT.md  TESTING.md  USER_MANUAL.md
scratch/: test_ai_live.py
src/: main.py  (+1 more)
(+153 files in other folders)
